@@ -1,6 +1,7 @@
 package com.peterphi.std.guice.web.rest.service.servicedescription.freemarker;
 
 import com.peterphi.std.annotation.Doc;
+import jakarta.ws.rs.core.UriInfo;
 import org.apache.commons.lang.StringUtils;
 
 import jakarta.ws.rs.CookieParam;
@@ -10,6 +11,7 @@ import jakarta.ws.rs.HeaderParam;
 import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.core.Context;
+
 import java.lang.annotation.Annotation;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
@@ -47,6 +49,8 @@ public class RestServiceResourceParamInfo
 
 		if (clazz == type && (pkg == null || pkg.startsWith("java.lang") || pkg.startsWith("java.util")))
 			return clazz.getSimpleName();
+		else if (clazz == UriInfo.class)
+			return "";
 		else
 			return type.toString();
 	}
@@ -89,6 +93,10 @@ public class RestServiceResourceParamInfo
 			final CookieParam p = getAnnotation(CookieParam.class);
 
 			return "CookieParam " + p.value();
+		}
+		else if (UriInfo.class == clazz)
+		{
+			return "Query String";
 		}
 		else if (hasAnnotation(Context.class))
 		{
@@ -145,8 +153,24 @@ public class RestServiceResourceParamInfo
 
 		if (doc != null)
 			return StringUtils.join(doc.value(), "\n");
-		else
-			return "";
+
+		final String name = getName();
+
+		if (String.class.equals(clazz) && "FormParam csrf_token".equals(name))
+		{
+			return "Token to protect against Cross-Site Request Forgery";
+		}
+		else if (UriInfo.class == clazz)
+		{
+			return "Probably: WebQuery Query String";
+		}
+		else if (clazz.isEnum())
+		{
+			return "One of: " + new SchemaGenerateUtil().getSchema(clazz);
+		}
+
+		// no doc available
+		return "";
 	}
 
 	@SuppressWarnings("unchecked")
@@ -181,10 +205,12 @@ public class RestServiceResourceParamInfo
 		{
 			return Arrays.asList(doc.href());
 		}
-		else
+		else if (UriInfo.class == clazz)
 		{
-			return Collections.emptyList();
+			return List.of("https://stdlib.readthedocs.io/en/latest/framework/webquery.html#query-string-format");
 		}
+
+		return Collections.emptyList();
 	}
 
 
